# serpshot-python

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
examples/: async_example.py  sync_example.py
serpshot/: __init__.py  _auth.py  _base.py  _http.py  async_client.py  client.py  exceptions.py  models.py  types.py
tests/: test_client.py
